# musikkhylla

./: .gitignore  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
backend/: app.py  auth_service.py  database.py  main.py  models.py  pyproject.toml  reset_db.py  schemas.py
backend/migrations/versions/: 7b200b074f86_initial_migration.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: AddAlbumModal.jsx  Album.jsx  AlbumDetailModal.jsx  AlbumStyles.js  Login.jsx  MusicRack.jsx
frontend/src/context/: AuthContext.jsx
